# claude-workspace-template

./: .claudeignore  .env.example  .gitignore  .worktreeinclude  CLAUDE.md  PROGRESS.md  README.md  justfile
.claude/: settings.json
.claude/commands/: baseline-check.md  log-experiment.md
.claude/rules/: agent-roles.md  documentation.md  execution-discipline.md  output-hygiene.md  performance.md  validation-modes.md  vectorization.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: br_endpoints.py  charts.py  excel_endpoints.py  session_endpoints.py
backend/app/core/: config.py
backend/app/db/: connection.py
backend/app/excel_br/: parser.py  queries.py  render.py  source.py  tools.py
backend/app/llm/: client.py
backend/app/sessions/: models.py  store.py
backend/app/sm_db/: queries.py  render.py  schema.py  tools.py
backend/prompts/: excel_br.md  sm_db.md
context/: data_schema.md  decisions.md
context/claude_design/design_handoff_talk2data_br/: README.md  wireframes_v01_explore.html  wireframes_v03_finalists.html
context/handoff/t2d-business-review/: README.md
docs/superpowers/plans/: 2026-04-25-excel-br-sprint1.md  2026-04-27-standalone-backend.md
docs/superpowers/specs/: 2026-04-25-excel-br-sprint1-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Avatar.tsx  ChatShell.tsx  DBChip.tsx  DataTable.tsx  FakeBars.tsx  FakeLine.tsx  FileChip.tsx  Icon.tsx  Message.tsx  MessageContent.tsx  Sidebar.tsx  ToolCallBadge.tsx
(+19 files in other folders)
