[project]
name = "talk2data-br"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.5",
    "pydantic>=2.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "openpyxl>=3.1",
    "plotly>=5.22",
    "tabulate>=0.9",
    "openai>=1.55",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]
